fixed spacing between faq and test

--- a/src/styles/home.scss
+++ b/src/styles/home.scss
@@ -261,7 +261,16 @@
 
 .faq {
   height: 2100px;
-  padding-top: 130px;
+  padding-top: 400px;
+  @media (min-width: $xl) {
+    padding-top: 300px;
+  }
+  @media (max-width: $md) {
+    padding-top: 400px;
+  }
+  @media (max-width: $xxs) {
+    padding-top: 600px;
+  }
   @media (min-width: $xxs) {
     height: 2100px;
   }
